--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^4.1.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "next": "12.1.6",
@@ -16,6 +17,7 @@
     "next-optimized-images": "^2.6.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1"
