--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.1.6",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
+    "next-share": "^0.16.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-datepicker": "^4.8.0",
