--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-query": "^3.39.1"
+    "react-query": "^3.39.1",
+    "react-toastify": "^9.0.7"
   },
   "devDependencies": {
     "eslint": "8.18.0",
